# BloodHorizon

./: .gitignore  CMakeLists.txt
include/: Animation.h  Game.h  GameConfig.h  Player.h  Timer.h
include/managers/: CollisionManager.h  DebugManager.h  FontManager.h  InputManager.h  ResolutionManager.h  ResourceManager.h  TrainsitionManager.h
include/utils/: SDLDeleter.h
include/views/: GameLoop.h  MainMenu.h
src/: Game.cpp  Player.cpp  main.cpp
src/managers/: CollisionManager.cpp  DebugManager.cpp  FontManager.cpp  InputManager.cpp  ResolutionManager.cpp  ResourceManager.cpp
src/views/: GameLoop.cpp  MainMenu.cpp
